--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,15 +30,33 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding-top: 20px;
+  /*width: 1440px;*/
+  min-height: 100%;
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
   color: #444444;
   background-color: #FFFFFF;
+
+  outline: 5px solid rgba(255, 99, 78, 0.5);
+  outline-offset: -5px;
+}
+
+.visually-hidden {
+  display: none;
 }
 
 .button {
+  display: block;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -51,42 +69,141 @@ body {
   color: #000000;
 }
 
+
 .button-footer {
   color: #FFFFFF;
 }
 
+.container {
+  width: 1160px;
+  margin: 0 auto;
+}
+
+
+.main-container {
+  flex-grow: 1;
+}
+
 /*page-header*/
 
-.page-header {
-  width: 1160;
-  height: 300;
+.page-header-container {
+  position: relative;
+  margin: 0 auto;
+  width: 1040px;
+  min-height: 170px;
   color: #000000;
+  border: 1px solid black;
+}
+
+.page-header-container::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  width: 1160px;
+  height: 300px;
+  top: 25px;
+  left: -60px;
   background-color: #FFE17F;
 }
 
-.page-header-row-form {
-  font-family: "Rubik", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  color: hsl(121, 83%, 48%);
+
+.logo {
+  display: block;
+  width: 145px;
+  height: 36px;
+  margin-bottom: 30px;
 }
 
+.user-menu {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+
+.search-form {
+  padding: 10px 208px 10px 48px;
+  display: inline-block;
+  border: 2px solid #000000;
+  border-radius: 20px;
+}
+
+[type="search"] {
+  position: relative;
+
+  border: none;
+  outline: none;
+  background: transparent;
+  background-color: #f40a0a;
+}
+
+[type="search"]::before {
+  content: "url(images/icon-search.svg)";
+  position: absolute;
+  top: 50%;
+  left: 16px;
+}
+
+
+/*
+input [type="search"] {
+  width: 359px;
+  min-height: 40px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: tomato;
+  text-align: left;
+  border: 1px solid black;
+  background-color: #FFC700;
+
+}*/
+
 .user-list {
-  list-style: none;
+  margin: 0;
+  display: flex;
+  justify-content: flex-end;
+  list-style-type: none;
+}
+
+.user-item:last-child {
+  margin-left: 61px;
 }
 
 .option {
   font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
   line-height: 30px;
+  align-items: center;
   color: #000000;
   text-decoration: none;
 }
 
+.navigation-menu {
+  display: block;
+  /*min-height: 50px;*/
+}
+
 .navigation-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
   list-style: none;
 }
 
+/*.navigation-item {
+
+
+}*/
+
 .navigation-link {
+  display: block;
+  padding: 15px 0;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   font-style: normal;
@@ -99,20 +216,71 @@ body {
   text-decoration: none;
 }
 
+.catalog-toggler {
+  padding-right: 57px;
+  margin-right: 270px;
+}
+
+.navigation-link-1 {
+  padding-right: 2px;
+  margin-right: 45px;
+}
+
+.navigation-link-2 {
+  padding-right: 6px;
+  margin-right: 45px;
+}
+
+.navigation-link-3 {
+  padding-right: 1px;
+}
+
+
 
 /*promo-products*/
 
+.promo-products {
+  margin-bottom: 70px;
+  width: 1160px;
+}
+
+.promo-product {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  border: 1px solid black;
+}
+
+.promo-product-image {
+  /*margin-right: 40px;*/
+  width: 560px;
+  height: 560px;
+}
+
+.promo-product-content {
+  margin: auto 0 0 0;
+  margin-bottom: 38px;
+  width: 560px;
+  height: 401px;
+  text-align: left;
+  /*align-items: flex-end;*/
+  border: 1px solid black;
+}
+
 .promo-product-number {
+  position: absolute;
+  top: 219px;
+  left: 1001px;
+  display: block;
   font-weight: 700;
   font-size: 180px;
   line-height: 30px;
   text-align: right;
-  color: #FFFFFF;
-
-  background-color: #FFE17F;
+  color: #f40a0a;
 }
 
 .title {
+  margin: 0;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -121,30 +289,108 @@ body {
   color: #000000;
 }
 
-.text {
-  text-align: left;
+.promo-product-content .title {
+  display: block;
+  margin-bottom: 29px;
 }
 
+.text {
+  margin: 0;
+  margin-bottom: 50px;
+}
+
+.promo-product-content .button {
+  padding: 10px 5px;
+  margin-bottom: 50px;
+  width: 210px;
+  height: 20px;
+  background: linear-gradient(to top,
+      #FFFFFF 40%, #FFE17F 40% 60%, #FFFFFF 60%);
+}
+
+.promo-product-feature-list {
+  display: flex;
+  justify-content: flex-start;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.promo-product-feature-item {
+  margin-right: 20px;
+}
+
+.promo-product-feature-item:last-child {
+  margin-right: 0;
+}
+
+
+
 .text-value {
+  display: block;
+  min-width: 147px;
+  margin-bottom: 12px;
   font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 36px;
   line-height: 30px;
-
-
   color: #000000;
 }
 
 .text-property {
+  display: block;
+  min-width: 147px;
   font-size: 16px;
 }
+
+.indicators-list {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+
+
+.indicators-item {
+  margin-right: 20px;
+}
+
+.indicators-item:last-child {
+  margin-right: 0;
+}
+
+.indicators-button-current {
+  background-color: #000000;
+}
+
+
+
+
 
 
 /*products-categories*/
 
+.products-categories {
+  margin-bottom: 70px;
+}
+
 .products-categories-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
   list-style: none;
+}
+
+.products-categories-item {
+  margin-right: 40px;
+  width: 160px;
+  min-height: 253px;
+}
+
+.products-categories-item:last-child {
+  margin-right: 0;
 }
 
 .products-categories-link {
@@ -153,50 +399,142 @@ body {
 }
 
 .products-categories-title {
-  font-family: "Raleway", sans-serif;
-  font-style: normal;
-  font-weight: 800;
+  order: -1;
   font-size: 18px;
   line-height: 24px;
   letter-spacing: -0.02em;
 }
 
 .image-wrapper {
+  margin-bottom: 32px;
   width: 160px;
   height: 160px;
-
   background-color: #FFE17F;
 }
 
 
 /*services*/
 
-.services-list {
-  list-style: none;
+.services {
+  min-height: 319px;
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: flex-start;
+  border: 1px solid black;
+}
+
+.container-button {
+  margin-right: 116px;
+  min-height: 319px;
+  display: flex;
+  flex-direction: column;
+  width: 280px;
+  justify-content: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  align-items: middle;
+  border-right: 7px solid black;
+  background-color: #2a09af;
+}
+
+.color-button {
+  width: 160px;
+  height: 20px;
+  background-color: black;
+  text-align: left;
+  padding: 9px 120px 11px;
+}
+
+.services-button {
+  padding: 9px 120px 11px 0;
+  margin-bottom: 35px;
+  display: block;
+  color: #000000;
+  width: 160px;
+  height: 20px;
+  background: linear-gradient(to top,
+      #FFFFFF 40%, #FFE17F 40% 60%, #FFFFFF 60%);
+}
+
+.services-button-current {
+  padding: 9px 120px 11px 0;
+  margin-bottom: 35px;
+  display: block;
+  color: #FFE17F;
+  background-color: #000000;
+  width: 160px;
+  height: 20px;
 }
 
 
+
+
+.services-list {
+  margin: 0;
+  padding: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 694px;
+  list-style: none;
+}
+
+.services-item {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  align-items: middle;
+}
+
+.services-item .title {
+  margin-bottom: 34px;
+}
+
+.text-services {
+  width: 475px;
+  margin-bottom: 0;
+}
+
+.services-image {
+
+  width: 136px;
+  height: 164px;
+
+}
+
+.services-text {
+  width: 694px;
+
+}
+
 /*advantage*/
 
-.advantage {
+.advantage .container {
+  display: flex;
+  margin-bottom: 70px;
+  justify-content: space-between;
+
+  align-items: center;
+  min-height: 100px;
   background: #F0F0F0;
 }
 
 .advantage-image {
-  width: 125px;
-  height: 100px;
-  text-align: center;
-
+  padding: 35px 39px 34px 39px;
+  width: 47px;
+  height: 31px;
   background-color: #FFE17F;
+  ;
 }
 
+
 .text-advantage {
+  margin: 0;
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 20px;
   line-height: 23px;
-  text-align: center;
+
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
@@ -206,22 +544,110 @@ body {
   width: 30px;
   height: 30px;
   text-align: center;
+  margin: 30px 42px 30px 0;
+
   background-color: rgba(220, 220, 220, 0.5);
   border-radius: 50%;
 }
 
+/*
 .advantage-information {
   border-radius: 50%;
 }
+*/
 
+/*about-us-contacts    БЛОК О нас. Контакты*/
 
-/*about-us-contacts*/
-
-.about-us-list {
-  color: #FFC700;
+.container-contacts {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 47px;
+  margin-bottom: 70px;
 }
 
-.about-us-item,
+.about-us {
+  width: 520px;
+  min-height: 446px;
+}
+
+.title-contacts {
+  margin-bottom: 48px;
+}
+
+.text-contacts {
+  margin-bottom: 30px;
+}
+
+.transport-list {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 30px;
+  list-style: none;
+}
+
+.text-transport {
+  position: relative;
+  margin-bottom: 19px;
+  padding-left: 35.5px;
+}
+
+.text-transport:last-child {
+  margin-bottom: 0;
+}
+
+.text-transport::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 3.5px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #FFC700;
+}
+
+.about-us .button {
+  padding: 10px 6.14px;
+  margin-bottom: 52px;
+  width: 257.73px;
+  height: 20px;
+  background: linear-gradient(to top,
+      #FFFFFF 40%, #FFE17F 40% 60%, #FFFFFF 60%);
+}
+
+
+.contacts {
+  width: 532px;
+  min-height: 498px;
+}
+
+.text-subtitle {
+  font-weight: 700;
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.text-address {
+  margin-bottom: 0;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  color: #444444;
+}
+
+.text-phone {
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  margin-bottom: 30px;
+  text-decoration: underline;
+  font-weight: 400;
+  font-size: 18px;
+  color: #444444;
+}
+
+
+.text-transport,
 .product-filter-group-title,
 .product-card-title {
   font-family: "Rubik", sans-serif;
@@ -242,73 +668,251 @@ body {
   color: #444444;
 }
 
-
-/*mailout*/
-
-.mailout-row-title {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 800;
-  font-size: 50px;
-  line-height: 50px;
-  color: #000000;
+.contacts-time {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-bottom: 40px;
 }
 
-.contacts-address-text {
-  font-family: "Rubik", sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  line-height: 30px;
-  color: #444444;
-  text-align: left;
+.text-time {
+  margin-bottom: 0;
 }
 
-.contacts-phone {
-  text-decoration-line: none;
-  color: #444444;
-  font-style: normal;
+.contacts .button {
+  padding: 10px 5.89px;
+  margin-bottom: 52px;
+  width: 247.23px;
+  height: 20px;
+  background: linear-gradient(to top,
+      #FFFFFF 40%, #FFE17F 40% 60%, #FFFFFF 60%);
 }
 
-.contacts-schedule-item {
-  font-family: "Rubik", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 30px;
-  color: #444444;
+
+
+/*subsribe    БЛОК Подпишитесь на рассылку*/
+
+.container-subscribe {
+  min-height: 421px;
+  background-color: #F0F0F0;
 }
+
+.subscribe {
+  width: 1153px;
+  min-height: 100px;
+  margin: 0 auto;
+  padding-top: 64px;
+  padding-left: 7px;
+  margin-bottom: 144px;
+  display: flex;
+  justify-content: space-between;
+  align-items: middle;
+}
+
+. title-subscribe {
+  width: 348px;
+  min-height: 100px;
+  margin-right: 252px;
+}
+
+.text-subscribe {
+  width: 560px;
+  margin-bottom: 0;
+}
+
+.subscribe-email {
+  width: 1158px;
+  height: 57px;
+  margin: 0 auto;
+  margin-bottom: 56px;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.subscribe-form {
+  display: flex;
+  justify-content: flex-start;
+  border: none;
+  border-bottom: 3px solid #C4C4C4;
+}
+
+input [type="email"] {
+
+
+
+
+  background-color: #FFC700;
+
+}
+
+.text-email {
+  position: relative;
+  display: block;
+  padding: 13.5px 0 13.5px 32px;
+  width: 128px;
+  height: 30px;
+  text-align: right;
+  margin-bottom: 0;
+}
+
+.text-email::before {
+
+  content: "";
+  position: absolute;
+
+}
+
+
+
+
+
+
 
 /*page-footer*/
 .page-footer {
+  min-height: 321px;
+  padding-top: 62px;
   background-color: #444444;
 }
 
-.contacts-address-text-footer {
-  font-family: "Rubik", sans-serif;
-  font-style: normal;
-  font-weight: 400;
+.container-footer {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+
+}
+
+.footer-contacts-1 {
+  width: 239px;
+  margin-right: 119px;
+
+}
+
+.logo-footer {
+  margin-bottom: 35px;
+}
+
+.text-address-footer {
   font-size: 16px;
   line-height: 20px;
   color: #FFFFFF;
+  margin-bottom: 0;
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 400;
 }
 
-.footer-social-button {
+.footer-contacts-2 {
+  width: 444px;
+  margin-right: 183px;
+}
+
+
+.footer-navigation-list {
+  margin: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin-bottom: 62px;
+}
+
+.footer-navigation-item {
+  margin-right: 35px;
+}
+
+.footer-navigation-item:last-child {
+  margin-right: 0;
+}
+
+
+
+
+
+.footer-social-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+
+}
+
+.footer-social-item {
+  position: relative;
+  margin-right: 15px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.3)
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.footer-social-item:last-child {
+  margin-right: 0;
+}
+
+
+/*
+.footer-social-button {
+background-position: 50% 50%;
+}
+*/
+
+
+
+.footer-contacts-3 {
+  width: 175px;
+  text-align: right;
+}
+
+.text-phone-footer {
+  color: #FFFFFF;
+  margin-bottom: 63px;
+
+}
+
+.contacts-address {
+  margin-bottom: 63px;
+
 }
 
 .contacts-phone-footer {
   font-size: 16px;
   line-height: 20px;
   color: #FFFFFF;
+  text-decoration: underline;
 }
+
+
+
+
+
 
 /*main-inner*/
 
+.inner-header {
+  width: 1079px;
+  min-height: 86px;
+  margin: 0 auto;
+  margin-bottom: 16px;
+  /*background-color: #FFC700;*/
+}
+
+.inner-header .title {
+  margin-bottom: 16px;
+}
+
 .breadcrumbs {
+  margin: 0;
+  padding: 0;
   list-style: none;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.breadcrumbs-item {
+  margin-right: 36px;
 }
 
 .text-breadcrumbs {
@@ -319,10 +923,48 @@ body {
 }
 
 .product-filter {
+  width: 1440px;
+  /*min-height: 1380px;*/
   background-color: #F0F0F0;
 }
 
+
+.container-catalog {
+  width: 1160px;
+  /*min-height: 1380px;*/
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container-filter {
+  width: 320px;
+  /*min-height: 1380px;*/
+  background-color: #FFE17F;
+}
+
+
+/*Block sorting*/
+
+.sorting {
+  width: 840px;
+  /*min-height: 1380px;*/
+  display: flex;
+  flex-direction: column;
+  background-color: #FFFFFF;
+
+}
+
+.container-sorting {
+  width: 760px;
+  padding: 20px 40px;
+  display: flex;
+  justify-content: space-between;
+  background-color: #FFE17F;
+}
+
 .product-filter-title,
+/*оптимизировать шрифты*/
 .sorting-title {
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -336,14 +978,69 @@ body {
 
 .select-control {
   color: #000000;
+  margin-bottom: 0;
+  border: none;
+}
+
+.button-sort {
+  width: 30px;
+  height: 30px;
+  background-color: #F0F0F0;
+  border: none;
+}
+
+.button-sort-up {
+  background-image: url("images/sort-up.svg");
+  /*не получается подключить*/
+}
+
+
+
+
+/*product-list*/
+
+.product-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 70px 40px;
+  justify-content: flex-start;
+  width: 760px;
+
+  background-color: #FFFFFF;
 }
 
 .product-card-link {
   text-decoration: none;
 }
 
-.product-list {
-  list-style: none;
+.product-card {
+  width: 360px;
+  margin-bottom: 44px;
+  margin-right: 40px;
+  border-bottom: 1px solid black;
+}
+
+.product-card:nth-child(2n) {
+  margin-right: 0;
+}
+
+.product-card-image {
+  width: 360px;
+  height: 380px;
+  margin-bottom: 32px;
+}
+
+.product-card-title {
+  display: inline;
+  /*как сделать правильно?*/
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: -2%;
+  color: #000000;
+  margin-bottom: 0;
 }
 
 .product-card-price {
@@ -354,7 +1051,71 @@ body {
   line-height: 21px;
   text-align: right;
   color: #444444;
+  margin-bottom: 0;
 }
+
+.product-card-button {
+  padding: 18px 0;
+  margin: 0 auto;
+  margin-bottom: 44px;
+  width: 754px;
+  font-size: 16px;
+  line-height: 19px;
+  background-color: #FFFFFF;
+  border: 3px solid #E5E5E5;
+}
+
+/*pagination*/
+
+.pagination {
+  width: 710px;
+  margin: 0 auto;
+  padding: 25px;
+  color: tomato;
+  background-color: #EBEBEB;
+  align-self: middle;
+  margin-bottom: 78px;
+}
+
+.pagination-list {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
+
+.pagination-item {
+  margin: 0;
+}
+
+
+.pagination-item:first-child {
+  margin-right: 145px;
+}
+
+.pagination-item:last-child {
+  margin-left: 145px;
+}
+
+.pagination-link {
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: centert;
+  color: #444444;
+
+  text-decoration: none;
+
+}
+
+
+
+.select-control {
+  color: #000000;
+}
+
 
 .product-filter-list {
   list-style: none;
