--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,20 +39,23 @@ body {
   flex-direction: column;
   margin: 0;
   padding-top: 20px;
-  min-width: 1440px;
   min-height: 100%;
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
   color: #444444;
   background-color: #FFFFFF;
-
-  outline: 5px solid rgba(255, 99, 78, 0.5);
-  outline-offset: -5px;
 }
 
 .visually-hidden {
-  display: none;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .button {
@@ -69,46 +72,27 @@ body {
   color: #000000;
 }
 
-
 .button-footer {
   color: #FFFFFF;
 }
 
-/*
 .container {
-  width: 1460px;
+  width: 1160px;
   margin: 0 auto;
 
   outline: 5px solid rgba(113, 255, 78, 0.5);
   outline-offset: -5px;
 }
 
-
 .main-index {
-  flex-grow: 1;
-}
-*/
-
-.main-index {
-  width: 1440px;
-  margin: 0 auto;
-
-  outline: 5px solid rgba(113, 255, 78, 0.5);
-  outline-offset: -5px;
-}
-
-.container {
   flex-grow: 1;
 }
 
 .main-inner {
-  width: 1440px;
-  margin: 0 auto;
-
-  outline: 5px solid rgba(113, 255, 78, 0.5);
-  outline-offset: -5px;
+  flex-grow: 1;
 }
 
+/*Основные заголовки*/
 .title {
   margin: 0;
   font-family: "Raleway", sans-serif;
@@ -120,28 +104,27 @@ body {
   text-align: left;
 }
 
+/*Основной текст  */
+.text {
+  margin: 0;
+}
+
 /*page-header*/
+
+
+.page-header {
+  background-color: #FFE17F;
+
+}
 
 .page-header-container {
   position: relative;
   margin: 0 auto;
-  width: 1040px;
+  padding-left: 60px;
+  padding-right: 60px;
+  box-sizing: border-box;
   min-height: 170px;
   color: #000000;
-
-  outline: 5px solid rgba(82, 17, 180, 0.5);
-  outline-offset: -5px;
-}
-
-.page-header-container::before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  width: 1160px;
-  height: 300px;
-  top: 25px;
-  left: -60px;
-  background-color: #FFE17F;
 }
 
 .logo {
@@ -151,48 +134,147 @@ body {
   margin-bottom: 30px;
 }
 
-.user-menu {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
-  margin-bottom: 30px;
-}
 
 
 .search-form {
-  padding: 10px 208px 10px 48px;
-  display: inline-block;
+  margin-right: 26px;
+  /* padding: 10px 208px 10px 48px;*/
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 517px;
   border: 2px solid #000000;
   border-radius: 20px;
 }
 
 [type="search"] {
-  position: relative;
 
+  width: 320px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
   border: none;
   outline: none;
   background: transparent;
-  background-color: #f40a0a;
 }
 
-[type="search"]::before {
-  content: "url(images/icon-search.svg)";
-  position: absolute;
-  top: 50%;
-  left: 16px;
+
+
+
+.page-header-button {
+  /*display: block;*/
+  width: 160px;
+  padding: 10px 56px;
+  box-sizing: border-box;
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  border: none;
+  border-left: 2px solid #000000;
+  background-color: transparent;
+
+
+
 }
+
+.user-menu {
+  margin: 0 auto;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  outline: 1px solid rgba(82, 17, 180, 0.5);
+  outline-offset: -1px;
+}
+
 
 .user-list {
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   list-style-type: none;
+  vertical-align: middle;
 }
 
 .user-item:last-child {
   margin-left: 61px;
 }
+
+.option {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  /*position: relative;*/
+  min-height: 30px;
+}
+
+.option-1 {
+  /*padding: 5px 0 5px 27px;*/
+  justify-content: flex-start;
+  width: 240px;
+  /*box-sizing: border-box;*/
+}
+
+.user-item:first span {
+  display: inline-block;
+
+}
+
+/*
+.option-1::before {
+  content: "";
+  display: block;
+  position: absolute;
+
+  width: 15px;
+  height: 12px;
+  top: 9px;
+  left: 0;
+  background-color: #f40a0a;
+}*/
+
+.option-2 {
+  /*padding: 5px 0 5px 22px;*/
+  width: 105px;
+  /*box-sizing: border-box;*/
+}
+
+/*
+.option-2::before {
+  content: "";
+  display: block;
+  position: absolute;
+
+  width: 10px;
+  height: 12px;
+  top: 9px;
+  left: 0;
+  background-color: #f40a0a;
+}*/
+
+.option-3 {
+  /*padding: 5px 0 5px 25px;*/
+  width: 99px;
+  /*box-sizing: border-box;*/
+}
+
+/*
+.option-3::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: 4;
+  width: 13px;
+  height: 21px;
+  top: 4.5px;
+  left: 0;
+  background-color: #f40a0a;
+}
+*/
 
 .option {
   font-family: "Rubik", sans-serif;
@@ -207,7 +289,7 @@ body {
 
 .navigation-menu {
   display: block;
-  /*min-height: 50px;*/
+  min-height: 50px;
 }
 
 .navigation-list {
@@ -215,13 +297,11 @@ body {
   padding: 0;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   list-style-type: none;
 }
 
-/*.navigation-item {
 
-
-}*/
 
 .navigation-link {
   display: block;
@@ -239,8 +319,16 @@ body {
 }
 
 .catalog-toggler {
-  padding-right: 57px;
-  margin-right: 270px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 293px;
+  margin-right: auto;
+}
+
+.navigation-item:first-child {
+  margin-right: auto;
+
 }
 
 .navigation-link-1 {
@@ -257,12 +345,10 @@ body {
   padding-right: 1px;
 }
 
-/*promo-products БЛОК со слайдером*/
+/*promo-products_БЛОК со слайдером*/
 
 .promo-products {
   margin-bottom: 70px;
-  width: 1160px;
-  margin: 0 auto;
 
   outline: 5px solid rgba(28, 24, 94, 0.5);
   outline-offset: -5px;
@@ -293,14 +379,6 @@ body {
   outline-offset: -5px;
 }
 
-.promo-product-content {
-  margin: auto 0 38px 0;
-  width: 560px;
-
-  outline: 5px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -5px;
-}
-
 .promo-product-number {
   position: absolute;
   z-index: -1;
@@ -314,13 +392,20 @@ body {
   color: #f40a0a;
 }
 
+.promo-product-content {
+  margin: auto 0 38px 0;
+  width: 560px;
+
+  outline: 5px solid rgba(252, 135, 2, 0.5);
+  outline-offset: -5px;
+}
+
 .promo-product-content .title {
   display: block;
   margin-bottom: 29px;
 }
 
-.text {
-  margin: 0;
+.text-promo-product {
   margin-bottom: 50px;
 }
 
@@ -374,7 +459,6 @@ body {
   left: 44%;
 }
 
-
 .indicators-list {
   display: flex;
   justify-content: center;
@@ -397,12 +481,7 @@ body {
 /*products-categories БЛОК Категория товаров*/
 
 .products-categories {
-  margin: 0 auto;
   margin-bottom: 70px;
-  width: 1160px;
-
-  outline: 5px solid rgba(82, 17, 180, 0.5);
-  outline-offset: -5px;
 }
 
 .products-categories-list {
@@ -417,9 +496,6 @@ body {
   margin-right: 40px;
   width: 160px;
   min-height: 253px;
-
-  outline: 5px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -5px;
 }
 
 .products-categories-item:last-child {
@@ -448,34 +524,32 @@ body {
 
 /*services БЛОК Сервисы*/
 
-.container-services {
-  background-color: #F0F0F0;
+.services {
+  min-height: 391px;
+  margin-bottom: 70px;
+
+  /*background-color: #F0F0F0;*/
   background: linear-gradient(to bottom,
       #FFFFFF 26%, #F0F0F0 26% 100%);
 }
 
-.services {
-  margin: 0 auto;
-  margin-bottom: 70px;
-  width: 1160px;
-  min-height: 319px;
+.container-services {
   display: flex;
   justify-content: flex-start;
+  align-items: center;
 
-  outline: 5px solid rgba(82, 17, 180, 0.5);
+  outline: 5px solid rgba(249, 4, 147, 0.5);
   outline-offset: -5px;
 }
 
-.container-button {
+.button-wrapper {
   margin-right: 116px;
-  min-height: 319px;
-  display: flex;
-  flex-direction: column;
-  width: 280px;
-  justify-content: center;
   margin-top: auto;
   margin-bottom: auto;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   border-right: 7px solid black;
 
   outline: 5px solid rgba(252, 135, 2, 0.5);
@@ -485,20 +559,36 @@ body {
 .services-button {
   display: block;
   margin-bottom: 35px;
-  padding: 9px 120px 11px 0;
-  color: #000000;
+  padding: 10px 0;
+  box-sizing: border-box;
+  text-align: center;
   width: 160px;
-  height: 20px;
+  height: 40px;
   color: #000000;
+  border: none;
   background: linear-gradient(to top,
-      #FFFFFF 40%, #FFE17F 40% 60%, #FFFFFF 60%);
+      #F0F0F0 40%, #FFE17F 40% 60%, #F0F0F0 60% 100%);
 }
 
 .services-button-current {
+  padding: 9px 120px 11px 0;
+  box-sizing: border-box;
+  width: 280px;
+  height: 40px;
+  border: none;
   color: #FFE17F;
-  background-color: #000000;
+  background: #000000;
 }
 
+.services-button:last-child {
+  margin-bottom: 65px;
+
+}
+
+.services-button:first-child {
+
+  margin-top: 65px;
+}
 .services-list {
   margin: 0;
   padding: 0;
@@ -536,61 +626,48 @@ body {
 /*advantage БЛОК Доставим редкий товар под заказ*/
 
 .advantage {
-  margin: 0 auto;
-  width: 1160px;
+  position: relative;
   margin-bottom: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  outline: 5px solid rgba(82, 17, 180, 0.5);
-  outline-offset: -5px;
-}
-
-.advantage-image {
-  padding: 35px 39px 34px 39px;
-  width: 47px;
-  height: 31px;
-  background-color: #FFE17F;
+  min-height: 100px;
+  background-color: #F0F0F0;
 }
 
 .title-advantage {
   font-size: 20px;
-  line-height: 23px;
+  line-height: 23.48px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
 }
 
+.advantage-image {
+  padding: 35px 39px;
+  background-color: #FFE17F;
+}
+
 .advantage-wrapper {
+  margin-right: 42px;
   width: 30px;
   height: 30px;
   text-align: center;
-  margin: 30px 42px 30px 0;
-
-  background-color: rgba(220, 220, 220, 0.5);
   border-radius: 50%;
+  background-color: rgba(220, 220, 220, 0.5);
 }
 
 
 /*about-us-contacts    БЛОК О нас. Контакты*/
 
 .container-contacts {
-  width: 1160px;
-  margin: 0 auto;
   margin-bottom: 70px;
   padding-top: 47px;
   display: flex;
   justify-content: space-between;
-
-  outline: 5px solid rgba(82, 17, 180, 0.5);
-  outline-offset: -5px;
 }
 
 .about-us {
   width: 520px;
-
-  outline: 5px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -5px;
 }
 
 .title-contacts {
@@ -611,8 +688,6 @@ body {
 .text-transport,
 .product-filter-group-title,
 .product-card-title {
-  font-family: "Rubik", sans-serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
@@ -652,9 +727,6 @@ body {
 
 .contacts {
   width: 532px;
-
-  outline: 5px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -5px;
 }
 
 .text-subtitle {
@@ -664,12 +736,7 @@ body {
 }
 
 .contacts-address {
-
-  margin: 0;
-  padding: 0;
-
-  outline: 5px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -5px;
+  margin-bottom: 30px;
 }
 
 .text-address {
@@ -725,99 +792,93 @@ body {
 
 /*subsribe    БЛОК Подпишитесь на рассылку*/
 
-.container-subscribe {
-  padding-top: 64px;
-  min-height: 421px;
+.subscribe {
   background-color: #F0F0F0;
 }
 
-.subscribe {
-  margin: 0 133px 0 147px;
+.container-subscribe {
+  padding-top: 64px;
+  min-height: 357px;
+}
+
+.subscribe-text {
   margin-bottom: 144px;
-  width: 1160px;
+  min-height: 100px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-
-  outline: 5px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -5px;
 }
 
 . title-subscribe {
-  width: 348px;
+  padding-left: 7px;
+  margin-right: 252px;
+  width: 355px;
 }
 
 .text-subscribe {
   width: 560px;
-  margin-bottom: 0;
 }
 
 .subscribe-email {
-  margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  width: 1158px;
-  /*height: 57px;*/
-  /*outline: 5px solid rgba(82, 17, 180, 0.5);
-  outline-offset: -5px;*/
+  align-items: center;
+  min-height: 57px;
 }
 
 .subscribe-form {
   display: flex;
   justify-content: flex-start;
   border: none;
-  border-bottom: 3px solid #C4C4C4;
 }
 
 [type="email"] {
-  background-color: #FFC700;
+  width: 557px;
+  color: #f40a0a;
+  background-color: #F0F0F0;
+  border: none;
+  border-bottom: 3px solid #C4C4C4;
+  /*
+  padding: 11px 447px 14px 16px;
+  width: 94px;
+  height: 30px;
+*/
 }
+
+.subscribe-form .button {
+  padding: 18px 39px;
+  box-sizing: border-box;
+  width: 253px;
+  border: 3px solid #C4C4C4;
+}
+
 
 .text-email {
-  position: relative;
-  display: block;
-  box-sizing: border-box;
-  padding: 0 0 0 32px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 160px;
-  height: 30px;
-  text-align: right;
-  margin-bottom: 0;
-
-  outline: 5px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -5px;
 }
-
-.text-email::before {
-  content: "";
-  position: absolute;
-}
-
 
 /*page-footer*/
 .page-footer {
-  /*margin: 0 auto;
-  width: 1440px;*/
-  padding-top: 62px;
+  min-height: 321px;
   background-color: #444444;
-}
-
-.container-footer {
-  margin: 0 auto;
-  width: 1160px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer-contacts-1 {
-  width: 239px;
-  margin-right: 119px;
 }
 
 .logo-footer {
   margin-bottom: 35px;
+  padding-top: 62px;
+}
 
-  outline: 2px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -2px;
+.footer-contacts {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.footer-contacts-1 {
+  width: 239px;
 }
 
 .text-address-footer {
@@ -828,68 +889,60 @@ body {
   font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 400;
-
-  outline: 2px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -2px;
 }
 
 .footer-contacts-2 {
-  width: 444px;
-  margin-right: 183px;
-
-  outline: 2px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -2px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 
 .footer-navigation-list {
   margin: 0;
-  list-style: none;
+  padding: 0;
   display: flex;
   justify-content: space-between;
-  padding: 0;
-  margin-bottom: 62px;
-}
-
-.footer-navigation-item {
-  margin-right: 35px;
-}
-
-.footer-navigation-item:last-child {
-  margin-right: 0;
+  align-items: center;
+  width: 444px;
+  list-style-type: none;
 }
 
 .footer-social-list {
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  width: 150px;
   list-style-type: none;
-
-  outline: 2px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -2px;
 }
 
 .footer-social-item {
-  position: relative;
-  margin-right: 15px;
+  display: block;
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  text-align: center;
+  vertical-align: center;
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.footer-social-item:last-child {
-  margin-right: 0;
+.footer-social-button {
+  display: block;
+  width: 100%;
+  height: 100%;
+
 }
 
 
 .footer-contacts-3 {
-  width: 175px;
-  text-align: right;
-
-  outline: 2px solid rgba(252, 135, 2, 0.5);
-  outline-offset: -2px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .text-phone-footer {
@@ -897,28 +950,14 @@ body {
   margin-bottom: 63px;
 }
 
-.contacts-address {
-  margin-bottom: 63px;
-}
-
-.contacts-phone-footer {
-  font-size: 16px;
-  line-height: 20px;
-  color: #FFFFFF;
-  text-decoration: underline;
-}
-
-
-
-
-
 
 /*main-inner СТРАНИЦА КАТАЛОГА*/
 
 .inner-header {
-  margin: 0 161px 0 200px;
-  margin-bottom: 16px;
-  width: 1079px;
+  padding: 0 21px 0 60px;
+  margin-bottom: 54px;
+  box-sizing: border-box;
+  min-height: 86px;
 
   outline: 5px solid rgba(8, 242, 164, 0.5);
   outline-offset: -5px;
@@ -951,19 +990,12 @@ body {
 
 /*Общий блок: фильтр_сортировка_каталог*/
 
-.container-product-filter {
-  margin: 0 auto;
-  width: 1440px;
+.product-filter {
   background-color: #F0F0F0;
-
-  outline: 5px solid rgba(6, 241, 14, 0.5);
-  outline-offset: -5px;
 }
 
-.container-catalog {
-  margin: 0 auto;
-  width: 1160px;
-  /*min-height: 1380px;*/
+.catalog {
+  min-height: 1380px;
   display: flex;
   justify-content: space-between;
 
@@ -973,38 +1005,40 @@ body {
 
 .filter {
   width: 320px;
-  /*min-height: 1380px;*/
-
-  outline: 5px solid rgba(82, 17, 180, 0.5);
-  outline-offset: -5px;
+  min-height: 1380px;
 }
 
 
 /*Block sorting*/
 
 .sorting {
-  width: 840px;
-  /*min-height: 1380px;*/
   display: flex;
   flex-direction: column;
+  width: 840px;
+  min-height: 1380px;
 
   outline: 5px solid rgba(82, 17, 180, 0.5);
   outline-offset: -5px;
 }
 
-.container-sorting {
-  width: 760px;
-  padding: 20px 40px;
+.sorting-select {
+  padding: 0 40px;
+  width: 840px;
+  min-height: 70px;
+  box-sizing: border-box;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  align-items: center;
 
   outline: 5px solid rgba(180, 17, 55, 0.5);
   outline-offset: -5px
 }
 
+/*
 .product-filter-title,
-/*оптимизировать шрифты*/
+
 .sorting-title {
+
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -1013,11 +1047,33 @@ body {
   letter-spacing: 0.2em;
   text-transform: uppercase;
   color: #000000;
+}*/
+
+.product-filter-title,
+
+.sorting-title {
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
 }
 
-.select-control {
+.sorting-title {
+  margin-right: 206px;
+}
+
+
+
+.text-select {
+  display: block;
+  padding-right: 32px;
+  margin-right: auto;
+  width: 141px;
+  height: 30px;
+  box-sizing: border-box;
   color: #000000;
-  margin-bottom: 0;
+  background-color: #F0F0F0;
+  ;
   border: none;
 }
 
@@ -1026,11 +1082,13 @@ body {
   height: 30px;
   background-color: #F0F0F0;
   border: none;
+
   outline: 1px solid rgba(82, 17, 180, 0.5);
   outline-offset: -1px;
 }
 
 .button-sort-up {
+
   background-image: url("images/sort-up.svg");
   /*не получается подключить*/
 }
@@ -1041,12 +1099,14 @@ body {
 .product-list {
   margin: 0;
   padding: 0;
-  list-style-type: none;
-  display: flex;
-  flex-wrap: wrap;
   padding: 70px 40px;
-  justify-content: flex-start;
-  width: 760px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 40px;
+  row-gap: 44px;
+  width: 840px;
+  box-sizing: border-box;
+  list-style-type: none;
   background-color: #FFFFFF;
 }
 
@@ -1056,14 +1116,15 @@ body {
 
 .product-card {
   width: 360px;
-  margin-bottom: 44px;
-  margin-right: 40px;
-  border-bottom: 1px solid black;
+  min-height: 452px;
+  /* margin-bottom: 44px;
+  margin-right: 40px;*/
 }
 
+/*
 .product-card:nth-child(2n) {
   margin-right: 0;
-}
+}*/
 
 .product-card-image {
   width: 360px;
@@ -1071,17 +1132,21 @@ body {
   margin-bottom: 32px;
 }
 
+.text-product-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
 .product-card-title {
-  display: inline;
-  /*как сделать правильно?*/
   font-weight: 700;
   line-height: 20px;
   letter-spacing: -2%;
   color: #000000;
-  margin-bottom: 0;
 }
 
 .product-card-price {
+  display: block;
   font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -1093,22 +1158,30 @@ body {
 }
 
 .product-card-button {
-  padding: 18px 0;
+  display: block;
   margin: 0 auto;
   margin-bottom: 44px;
-  width: 754px;
+  width: 760px;
+  min-height: 55px;
+  line-height: 40px;
   font-size: 16px;
-  line-height: 19px;
+
   background-color: #FFFFFF;
   border: 3px solid #E5E5E5;
+}
+
+.oo {
+  background-color: #FFFFFF;
 }
 
 /*pagination*/
 
 .pagination {
-  width: 710px;
+  display: block;
+  width: 760px;
   margin: 0 auto;
   padding: 25px;
+  box-sizing: border-box;
   color: tomato;
   background-color: #EBEBEB;
   align-self: middle;
@@ -1119,7 +1192,7 @@ body {
   margin: 0;
   display: flex;
   justify-content: space-between;
-  list-style: none;
+  list-style-type: none;
 }
 
 .pagination-item {
@@ -1146,10 +1219,10 @@ body {
   text-decoration: none;
 }
 
-
+/*
 .select-control {
   color: #000000;
-}
+}*/
 
 .product-filter-list {
   list-style: none;
